y.output
Terminals unused in grammar

    ARROW
    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE DeclMult RBRACE

    2 DeclMult: MethodDecl DeclMult
    3         | FieldDecl DeclMult
    4         | SEMICOLON DeclMult
    5         | %empty

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type ID COMID SEMICOLON
    8          | error SEMICOLON

    9 COMID: COMMA ID COMID
   10      | %empty

   11 Type: BOOL
   12     | INT
   13     | DOUBLE

   14 MethodHeader: Type ID LPAR FormalParams RPAR
   15             | Type ID LPAR RPAR
   16             | VOID ID LPAR FormalParams RPAR
   17             | VOID ID LPAR RPAR

   18 FormalParams: Type ID COMTYPID
   19             | STRING LSQ RSQ ID

   20 COMTYPID: COMMA Type ID COMTYPID
   21         | %empty

   22 MethodBody: LBRACE BODY RBRACE

   23 BODY: Statement BODY
   24     | VarDecl BODY
   25     | %empty

   26 VarDecl: Type ID COMIDVAR SEMICOLON

   27 COMIDVAR: COMMA ID COMIDVAR
   28         | %empty

   29 Statement: LBRACE StatementHelper RBRACE
   30          | IF LPAR ExprHelper RPAR Statement
   31          | IF LPAR ExprHelper RPAR Statement ELSE Statement
   32          | WHILE LPAR ExprHelper RPAR Statement
   33          | RETURN SEMICOLON
   34          | RETURN ExprHelper SEMICOLON
   35          | MethodInvocation SEMICOLON
   36          | Assignment SEMICOLON
   37          | ParseArgs SEMICOLON
   38          | SemicolonHelper
   39          | PRINT LPAR ExprHelper RPAR SEMICOLON
   40          | PRINT LPAR STRLIT RPAR SEMICOLON
   41          | error SEMICOLON

   42 StatementHelper: Statement StatementHelper
   43                | %empty

   44 SemicolonHelper: SEMICOLON

   45 MethodInvocation: ID LPAR RPAR
   46                 | ID LPAR ExprHelper COMMAExpr RPAR
   47                 | ID LPAR error RPAR

   48 COMMAExpr: COMMA ExprHelper COMMAExpr
   49          | %empty

   50 Assignment: ID ASSIGN ExprHelper

   51 ParseArgs: PARSEINT LPAR ID LSQ ExprHelper RSQ RPAR
   52          | PARSEINT LPAR error RPAR

   53 Expr: Expr OR Expr
   54     | Expr XOR Expr
   55     | Expr LSHIFT Expr
   56     | Expr RSHIFT Expr
   57     | Expr AND Expr
   58     | Expr LT Expr
   59     | Expr GT Expr
   60     | Expr EQ Expr
   61     | Expr NE Expr
   62     | Expr LE Expr
   63     | Expr GE Expr
   64     | Expr PLUS Expr
   65     | Expr MINUS Expr
   66     | Expr STAR Expr
   67     | Expr DIV Expr
   68     | Expr MOD Expr
   69     | NOT Expr
   70     | MINUS Expr
   71     | PLUS Expr
   72     | INTLIT
   73     | REALLIT
   74     | ID
   75     | ID DOTLENGTH
   76     | BOOLLIT
   77     | LPAR ExprHelper RPAR
   78     | MethodInvocation
   79     | ParseArgs
   80     | LPAR error RPAR

   81 ExprHelper: Assignment
   82           | Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 41 47 52 80
    ELSE (258) 31
    DOTLENGTH (259) 75
    DOUBLE (260) 13
    AND (261) 57
    ASSIGN (262) 50
    STAR (263) 66
    COMMA (264) 9 20 27 48
    DIV (265) 67
    EQ (266) 60
    GE (267) 63
    GT (268) 59
    LBRACE (269) 1 22 29
    LE (270) 62
    LPAR (271) 14 15 16 17 30 31 32 39 40 45 46 47 51 52 77 80
    LSQ (272) 19 51
    LT (273) 58
    MINUS (274) 65 70
    MOD (275) 68
    NE (276) 61
    NOT (277) 69
    OR (278) 53
    PLUS (279) 64 71
    RBRACE (280) 1 22 29
    RPAR (281) 14 15 16 17 30 31 32 39 40 45 46 47 51 52 77 80
    RSQ (282) 19 51
    SEMICOLON (283) 4 7 8 26 33 34 35 36 37 39 40 41 44
    ARROW (284)
    LSHIFT (285) 55
    RSHIFT (286) 56
    XOR (287) 54
    BOOL (288) 11
    CLASS (289) 1
    IF (290) 30 31
    INT (291) 12
    PRINT (292) 39 40
    PARSEINT (293) 51 52
    PUBLIC (294) 6 7
    RETURN (295) 33 34
    STATIC (296) 6 7
    STRING (297) 19
    VOID (298) 16 17
    WHILE (299) 32
    STRLIT <stringValue> (300) 40
    INTLIT <stringValue> (301) 72
    RESERVED <stringValue> (302)
    BOOLLIT <stringValue> (303) 76
    ID <stringValue> (304) 1 7 9 14 15 16 17 18 19 20 26 27 45 46 47 50 51 74 75
    REALLIT <stringValue> (305) 73
    UNARY (306)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    Program <node> (53)
        on left: 1
        on right: 0
    DeclMult <node> (54)
        on left: 2 3 4 5
        on right: 1 2 3 4
    MethodDecl <node> (55)
        on left: 6
        on right: 2
    FieldDecl <node> (56)
        on left: 7 8
        on right: 3
    COMID <node> (57)
        on left: 9 10
        on right: 7 9
    Type <node> (58)
        on left: 11 12 13
        on right: 7 14 15 18 20 26
    MethodHeader <node> (59)
        on left: 14 15 16 17
        on right: 6
    FormalParams <node> (60)
        on left: 18 19
        on right: 14 16
    COMTYPID <node> (61)
        on left: 20 21
        on right: 18 20
    MethodBody <node> (62)
        on left: 22
        on right: 6
    BODY <node> (63)
        on left: 23 24 25
        on right: 22 23 24
    VarDecl <node> (64)
        on left: 26
        on right: 24
    COMIDVAR <node> (65)
        on left: 27 28
        on right: 26 27
    Statement <node> (66)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 23 30 31 32 42
    StatementHelper <node> (67)
        on left: 42 43
        on right: 29 42
    SemicolonHelper <node> (68)
        on left: 44
        on right: 38
    MethodInvocation <node> (69)
        on left: 45 46 47
        on right: 35 78
    COMMAExpr <node> (70)
        on left: 48 49
        on right: 46 48
    Assignment <node> (71)
        on left: 50
        on right: 36 81
    ParseArgs <node> (72)
        on left: 51 52
        on right: 37 79
    Expr <node> (73)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 82
    ExprHelper <node> (74)
        on left: 81 82
        on right: 30 31 32 34 39 46 48 50 51 77


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID LBRACE DeclMult RBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . LBRACE DeclMult RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID LBRACE . DeclMult RBRACE

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (DeclMult)

    DeclMult    go to state 9
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 6

    8 FieldDecl: error . SEMICOLON

    SEMICOLON  shift, and go to state 12


State 7

    4 DeclMult: SEMICOLON . DeclMult

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (DeclMult)

    DeclMult    go to state 13
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 8

    6 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC . STATIC Type ID COMID SEMICOLON

    STATIC  shift, and go to state 14


State 9

    1 Program: CLASS ID LBRACE DeclMult . RBRACE

    RBRACE  shift, and go to state 15


State 10

    2 DeclMult: MethodDecl . DeclMult

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (DeclMult)

    DeclMult    go to state 16
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 11

    3 DeclMult: FieldDecl . DeclMult

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (DeclMult)

    DeclMult    go to state 17
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 12

    8 FieldDecl: error SEMICOLON .

    $default  reduce using rule 8 (FieldDecl)


State 13

    4 DeclMult: SEMICOLON DeclMult .

    $default  reduce using rule 4 (DeclMult)


State 14

    6 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC . Type ID COMID SEMICOLON

    DOUBLE  shift, and go to state 18
    BOOL    shift, and go to state 19
    INT     shift, and go to state 20
    VOID    shift, and go to state 21

    Type          go to state 22
    MethodHeader  go to state 23


State 15

    1 Program: CLASS ID LBRACE DeclMult RBRACE .

    $default  reduce using rule 1 (Program)


State 16

    2 DeclMult: MethodDecl DeclMult .

    $default  reduce using rule 2 (DeclMult)


State 17

    3 DeclMult: FieldDecl DeclMult .

    $default  reduce using rule 3 (DeclMult)


State 18

   13 Type: DOUBLE .

    $default  reduce using rule 13 (Type)


State 19

   11 Type: BOOL .

    $default  reduce using rule 11 (Type)


State 20

   12 Type: INT .

    $default  reduce using rule 12 (Type)


State 21

   16 MethodHeader: VOID . ID LPAR FormalParams RPAR
   17             | VOID . ID LPAR RPAR

    ID  shift, and go to state 24


State 22

    7 FieldDecl: PUBLIC STATIC Type . ID COMID SEMICOLON
   14 MethodHeader: Type . ID LPAR FormalParams RPAR
   15             | Type . ID LPAR RPAR

    ID  shift, and go to state 25


State 23

    6 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    LBRACE  shift, and go to state 26

    MethodBody  go to state 27


State 24

   16 MethodHeader: VOID ID . LPAR FormalParams RPAR
   17             | VOID ID . LPAR RPAR

    LPAR  shift, and go to state 28


State 25

    7 FieldDecl: PUBLIC STATIC Type ID . COMID SEMICOLON
   14 MethodHeader: Type ID . LPAR FormalParams RPAR
   15             | Type ID . LPAR RPAR

    COMMA  shift, and go to state 29
    LPAR   shift, and go to state 30

    $default  reduce using rule 10 (COMID)

    COMID  go to state 31


State 26

   22 MethodBody: LBRACE . BODY RBRACE

    error      shift, and go to state 32
    DOUBLE     shift, and go to state 18
    LBRACE     shift, and go to state 33
    SEMICOLON  shift, and go to state 34
    BOOL       shift, and go to state 19
    IF         shift, and go to state 35
    INT        shift, and go to state 20
    PRINT      shift, and go to state 36
    PARSEINT   shift, and go to state 37
    RETURN     shift, and go to state 38
    WHILE      shift, and go to state 39
    ID         shift, and go to state 40

    RBRACE  reduce using rule 25 (BODY)

    Type              go to state 41
    BODY              go to state 42
    VarDecl           go to state 43
    Statement         go to state 44
    SemicolonHelper   go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 27

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 6 (MethodDecl)


State 28

   16 MethodHeader: VOID ID LPAR . FormalParams RPAR
   17             | VOID ID LPAR . RPAR

    DOUBLE  shift, and go to state 18
    RPAR    shift, and go to state 49
    BOOL    shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 50

    Type          go to state 51
    FormalParams  go to state 52


State 29

    9 COMID: COMMA . ID COMID

    ID  shift, and go to state 53


State 30

   14 MethodHeader: Type ID LPAR . FormalParams RPAR
   15             | Type ID LPAR . RPAR

    DOUBLE  shift, and go to state 18
    RPAR    shift, and go to state 54
    BOOL    shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 50

    Type          go to state 51
    FormalParams  go to state 55


State 31

    7 FieldDecl: PUBLIC STATIC Type ID COMID . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 32

   41 Statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 33

   29 Statement: LBRACE . StatementHelper RBRACE

    error      shift, and go to state 32
    LBRACE     shift, and go to state 33
    SEMICOLON  shift, and go to state 34
    IF         shift, and go to state 35
    PRINT      shift, and go to state 36
    PARSEINT   shift, and go to state 37
    RETURN     shift, and go to state 38
    WHILE      shift, and go to state 39
    ID         shift, and go to state 40

    RBRACE  reduce using rule 43 (StatementHelper)

    Statement         go to state 58
    StatementHelper   go to state 59
    SemicolonHelper   go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 34

   44 SemicolonHelper: SEMICOLON .

    $default  reduce using rule 44 (SemicolonHelper)


State 35

   30 Statement: IF . LPAR ExprHelper RPAR Statement
   31          | IF . LPAR ExprHelper RPAR Statement ELSE Statement

    LPAR  shift, and go to state 60


State 36

   39 Statement: PRINT . LPAR ExprHelper RPAR SEMICOLON
   40          | PRINT . LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 61


State 37

   51 ParseArgs: PARSEINT . LPAR ID LSQ ExprHelper RSQ RPAR
   52          | PARSEINT . LPAR error RPAR

    LPAR  shift, and go to state 62


State 38

   33 Statement: RETURN . SEMICOLON
   34          | RETURN . ExprHelper SEMICOLON

    LPAR       shift, and go to state 63
    MINUS      shift, and go to state 64
    NOT        shift, and go to state 65
    PLUS       shift, and go to state 66
    SEMICOLON  shift, and go to state 67
    PARSEINT   shift, and go to state 37
    INTLIT     shift, and go to state 68
    BOOLLIT    shift, and go to state 69
    ID         shift, and go to state 70
    REALLIT    shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 76


State 39

   32 Statement: WHILE . LPAR ExprHelper RPAR Statement

    LPAR  shift, and go to state 77


State 40

   45 MethodInvocation: ID . LPAR RPAR
   46                 | ID . LPAR ExprHelper COMMAExpr RPAR
   47                 | ID . LPAR error RPAR
   50 Assignment: ID . ASSIGN ExprHelper

    ASSIGN  shift, and go to state 78
    LPAR    shift, and go to state 79


State 41

   26 VarDecl: Type . ID COMIDVAR SEMICOLON

    ID  shift, and go to state 80


State 42

   22 MethodBody: LBRACE BODY . RBRACE

    RBRACE  shift, and go to state 81


State 43

   24 BODY: VarDecl . BODY

    error      shift, and go to state 32
    DOUBLE     shift, and go to state 18
    LBRACE     shift, and go to state 33
    SEMICOLON  shift, and go to state 34
    BOOL       shift, and go to state 19
    IF         shift, and go to state 35
    INT        shift, and go to state 20
    PRINT      shift, and go to state 36
    PARSEINT   shift, and go to state 37
    RETURN     shift, and go to state 38
    WHILE      shift, and go to state 39
    ID         shift, and go to state 40

    RBRACE  reduce using rule 25 (BODY)

    Type              go to state 41
    BODY              go to state 82
    VarDecl           go to state 43
    Statement         go to state 44
    SemicolonHelper   go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 44

   23 BODY: Statement . BODY

    error      shift, and go to state 32
    DOUBLE     shift, and go to state 18
    LBRACE     shift, and go to state 33
    SEMICOLON  shift, and go to state 34
    BOOL       shift, and go to state 19
    IF         shift, and go to state 35
    INT        shift, and go to state 20
    PRINT      shift, and go to state 36
    PARSEINT   shift, and go to state 37
    RETURN     shift, and go to state 38
    WHILE      shift, and go to state 39
    ID         shift, and go to state 40

    RBRACE  reduce using rule 25 (BODY)

    Type              go to state 41
    BODY              go to state 83
    VarDecl           go to state 43
    Statement         go to state 44
    SemicolonHelper   go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 45

   38 Statement: SemicolonHelper .

    $default  reduce using rule 38 (Statement)


State 46

   35 Statement: MethodInvocation . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 47

   36 Statement: Assignment . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 48

   37 Statement: ParseArgs . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 49

   17 MethodHeader: VOID ID LPAR RPAR .

    $default  reduce using rule 17 (MethodHeader)


State 50

   19 FormalParams: STRING . LSQ RSQ ID

    LSQ  shift, and go to state 87


State 51

   18 FormalParams: Type . ID COMTYPID

    ID  shift, and go to state 88


State 52

   16 MethodHeader: VOID ID LPAR FormalParams . RPAR

    RPAR  shift, and go to state 89


State 53

    9 COMID: COMMA ID . COMID

    COMMA  shift, and go to state 29

    $default  reduce using rule 10 (COMID)

    COMID  go to state 90


State 54

   15 MethodHeader: Type ID LPAR RPAR .

    $default  reduce using rule 15 (MethodHeader)


State 55

   14 MethodHeader: Type ID LPAR FormalParams . RPAR

    RPAR  shift, and go to state 91


State 56

    7 FieldDecl: PUBLIC STATIC Type ID COMID SEMICOLON .

    $default  reduce using rule 7 (FieldDecl)


State 57

   41 Statement: error SEMICOLON .

    $default  reduce using rule 41 (Statement)


State 58

   42 StatementHelper: Statement . StatementHelper

    error      shift, and go to state 32
    LBRACE     shift, and go to state 33
    SEMICOLON  shift, and go to state 34
    IF         shift, and go to state 35
    PRINT      shift, and go to state 36
    PARSEINT   shift, and go to state 37
    RETURN     shift, and go to state 38
    WHILE      shift, and go to state 39
    ID         shift, and go to state 40

    RBRACE  reduce using rule 43 (StatementHelper)

    Statement         go to state 58
    StatementHelper   go to state 92
    SemicolonHelper   go to state 45
    MethodInvocation  go to state 46
    Assignment        go to state 47
    ParseArgs         go to state 48


State 59

   29 Statement: LBRACE StatementHelper . RBRACE

    RBRACE  shift, and go to state 93


State 60

   30 Statement: IF LPAR . ExprHelper RPAR Statement
   31          | IF LPAR . ExprHelper RPAR Statement ELSE Statement

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 70
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 94


State 61

   39 Statement: PRINT LPAR . ExprHelper RPAR SEMICOLON
   40          | PRINT LPAR . STRLIT RPAR SEMICOLON

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    STRLIT    shift, and go to state 95
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 70
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 96


State 62

   51 ParseArgs: PARSEINT LPAR . ID LSQ ExprHelper RSQ RPAR
   52          | PARSEINT LPAR . error RPAR

    error  shift, and go to state 97
    ID     shift, and go to state 98


State 63

   77 Expr: LPAR . ExprHelper RPAR
   80     | LPAR . error RPAR

    error     shift, and go to state 99
    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 70
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 100


State 64

   70 Expr: MINUS . Expr

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 101
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    ParseArgs         go to state 74
    Expr              go to state 102


State 65

   69 Expr: NOT . Expr

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 101
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    ParseArgs         go to state 74
    Expr              go to state 103


State 66

   71 Expr: PLUS . Expr

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 101
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    ParseArgs         go to state 74
    Expr              go to state 104


State 67

   33 Statement: RETURN SEMICOLON .

    $default  reduce using rule 33 (Statement)


State 68

   72 Expr: INTLIT .

    $default  reduce using rule 72 (Expr)


State 69

   76 Expr: BOOLLIT .

    $default  reduce using rule 76 (Expr)


State 70

   45 MethodInvocation: ID . LPAR RPAR
   46                 | ID . LPAR ExprHelper COMMAExpr RPAR
   47                 | ID . LPAR error RPAR
   50 Assignment: ID . ASSIGN ExprHelper
   74 Expr: ID .
   75     | ID . DOTLENGTH

    DOTLENGTH  shift, and go to state 105
    ASSIGN     shift, and go to state 78
    LPAR       shift, and go to state 79

    $default  reduce using rule 74 (Expr)


State 71

   73 Expr: REALLIT .

    $default  reduce using rule 73 (Expr)


State 72

   78 Expr: MethodInvocation .

    $default  reduce using rule 78 (Expr)


State 73

   81 ExprHelper: Assignment .

    $default  reduce using rule 81 (ExprHelper)


State 74

   79 Expr: ParseArgs .

    $default  reduce using rule 79 (Expr)


State 75

   53 Expr: Expr . OR Expr
   54     | Expr . XOR Expr
   55     | Expr . LSHIFT Expr
   56     | Expr . RSHIFT Expr
   57     | Expr . AND Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr
   60     | Expr . EQ Expr
   61     | Expr . NE Expr
   62     | Expr . LE Expr
   63     | Expr . GE Expr
   64     | Expr . PLUS Expr
   65     | Expr . MINUS Expr
   66     | Expr . STAR Expr
   67     | Expr . DIV Expr
   68     | Expr . MOD Expr
   82 ExprHelper: Expr .

    AND     shift, and go to state 106
    STAR    shift, and go to state 107
    DIV     shift, and go to state 108
    EQ      shift, and go to state 109
    GE      shift, and go to state 110
    GT      shift, and go to state 111
    LE      shift, and go to state 112
    LT      shift, and go to state 113
    MINUS   shift, and go to state 114
    MOD     shift, and go to state 115
    NE      shift, and go to state 116
    OR      shift, and go to state 117
    PLUS    shift, and go to state 118
    LSHIFT  shift, and go to state 119
    RSHIFT  shift, and go to state 120
    XOR     shift, and go to state 121

    $default  reduce using rule 82 (ExprHelper)


State 76

   34 Statement: RETURN ExprHelper . SEMICOLON

    SEMICOLON  shift, and go to state 122


State 77

   32 Statement: WHILE LPAR . ExprHelper RPAR Statement

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 70
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 123


State 78

   50 Assignment: ID ASSIGN . ExprHelper

    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 70
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 124


State 79

   45 MethodInvocation: ID LPAR . RPAR
   46                 | ID LPAR . ExprHelper COMMAExpr RPAR
   47                 | ID LPAR . error RPAR

    error     shift, and go to state 125
    LPAR      shift, and go to state 63
    MINUS     shift, and go to state 64
    NOT       shift, and go to state 65
    PLUS      shift, and go to state 66
    RPAR      shift, and go to state 126
    PARSEINT  shift, and go to state 37
    INTLIT    shift, and go to state 68
    BOOLLIT   shift, and go to state 69
    ID        shift, and go to state 70
    REALLIT   shift, and go to state 71

    MethodInvocation  go to state 72
    Assignment        go to state 73
    ParseArgs         go to state 74
    Expr              go to state 75
    ExprHelper        go to state 127


State 80

   26 VarDecl: Type ID . COMIDVAR SEMICOLON

    COMMA  shift, and go to state 128

    $default  reduce using rule 28 (COMIDVAR)

    COMIDVAR  go to state 129


State 81

   22 MethodBody: LBRACE BODY RBRACE .

    $default  reduce using rule 22 (MethodBody)


State 82

   24 BODY: VarDecl BODY .
